--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="tabs-section">
         <div class="container-text">
             <!-- first part -->
-            <div class="numbers-wrapper tablinks"  onclick="openCity(event, 'London')"d>
+            <div class="numbers-wrapper tablinks"  onclick="openCity(event, 'first')"d>
                 <div class="numbers no" id="1">
                    01  
                 </div>
@@ -37,7 +37,7 @@
                        special early bird price
                 </div>
             </div>
-            <div class="numbers-wrapper tablinks" onclick="openCity(event, 'Paris')">
+            <div class="numbers-wrapper tablinks" onclick="openCity(event, 'second')">
                 <div class="numbers no" id="2">
                      02 
                 </div>
@@ -45,7 +45,7 @@
                         early bird gift package
                 </div>
             </div>
-            <div class="numbers-wrapper tablinks" onclick="openCity(event, 'Tokyo')">
+            <div class="numbers-wrapper tablinks" onclick="openCity(event, 'third')">
                 <div class="numbers no">
                      03
                 </div>
@@ -53,7 +53,7 @@
                     change to get full refund
                 </div>
             </div>
-            <div class="numbers-wrapper tablinks" onclick="openCity(event, 'NoviSad')">
+            <div class="numbers-wrapper tablinks" onclick="openCity(event, 'forth')">
                 <div class="numbers no">
                      04 
                 </div>
@@ -68,7 +68,7 @@
             <div class="order-box">
                 <div id="arrow-left" class="arrow-wrapp arrow"><span class="arrow-left"></div>
                   
-                <div class="order-wrapper tabcontent slide" id="London">
+                <div class="order-wrapper tabcontent slide" id="first">
                     <p class="text">Pre - order exclusive gift package</p><span class="btn-span">Limited offer</span>
                     <div class="order-wrapper-inside">
                         <div class="order-boxes">
@@ -95,7 +95,7 @@
                     </div>
                 </div>
                 <!-- 2 -->
-                <div class="order-wrapper tabcontent slide" id="Paris">
+                <div class="order-wrapper tabcontent slide" id="second">
                     <p class="text">Pre - order exclusive gift package</p><span class="btn-span">Limited offer</span>
                     <div class="order-wrapper-inside">
                         <div class="order-boxes">
@@ -123,7 +123,7 @@
                 </div>
 
                 <!-- 3 -->
-                <div class="order-wrapper tabcontent slide" id="Tokyo">
+                <div class="order-wrapper tabcontent slide" id="third">
                     <p class="text">Pre - order exclusive gift package</p><span class="btn-span">Limited offer</span>
                     <div class="order-wrapper-inside">
                         <div class="order-boxes">
@@ -151,7 +151,7 @@
                 </div>
 
                 <!-- 4 -->
-                <div class="order-wrapper tabcontent slide" id="NoviSad">
+                <div class="order-wrapper tabcontent slide" id="forth">
                     <p class="text">Pre - order exclusive gift package</p><span class="btn-span">Limited offer</span>
                     <div class="order-wrapper-inside">
                         <div class="order-boxes">
