--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="col-50"><img src="phone.png" alt=""></div>
                 <div class="col-50">
                     <div class="text-wrap">
-                        <h1>Red Magic Mars is coming</h1>
+                        <h1 class="heading-primary">Red Magic Mars is coming</h1>
                         <p>Pre-order on Jan 15th. Come and get all the following benefits!</p>
                         <div class="input-line"></div>
                         <input type="text" name="subscribe" placeholder="Don’t miss the supply drop! Subscribe now.">
@@ -190,7 +190,7 @@
 
     <section class="tagline">
         <h1>Tagline</h1>
-        <img src="tagline.png" alt="tagline">
+        <img class="img-tagline  container-text " src="tagline.png" alt="tagline">
 
         <div style="width:100%;height:100%;width: 820px; height: 461.25px; float: none; clear: both; margin: 2px auto;">
             <embed src="http://www.youtube.com/v/GlIzuTQGgzs?version=3&amp;hl=en_US&amp;rel=0&amp;autohide=1&amp;autoplay=1"
